[gd_scene load_steps=11 format=2]

[ext_resource path="res://Textures/UI/NotePad.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Streetwear.otf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/Journal/Documents.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Journal/Objectives.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Journal/Journal.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 12
extra_spacing_space = 1
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="Theme" id=5]
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_hover = Color( 0.215686, 0.298039, 0.423529, 1 )
Button/fonts/font = SubResource( 1 )
Button/styles/disabled = SubResource( 2 )
Button/styles/focus = SubResource( 3 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 3 )
Label/colors/font_color = Color( 0, 0, 0, 1 )
Label/fonts/font = SubResource( 1 )

[node name="Journal" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -112.0
margin_right = 128.0
margin_bottom = 112.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
anchor_left = 0.25
anchor_top = 0.165
anchor_right = 0.75
anchor_bottom = 0.946
margin_top = 0.0399971
margin_right = -1.52588e-05
margin_bottom = 0.095993
rect_clip_content = true
custom_constants/margin_right = 2
custom_constants/margin_top = 5
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="MarginContainer" parent="TextureRect/MarginContainer"]
margin_left = 2.0
margin_top = 5.0
margin_right = 125.0
margin_bottom = 172.0
custom_constants/margin_right = 20
custom_constants/margin_left = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer/Menu"]
margin_left = 20.0
margin_right = 103.0
margin_bottom = 167.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="Control" parent="TextureRect/MarginContainer/Menu/VBoxContainer"]
margin_right = 83.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )

[node name="ButtonObjectives" type="Button" parent="TextureRect/MarginContainer/Menu/VBoxContainer"]
margin_top = 14.0
margin_right = 83.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 18 )
size_flags_horizontal = 3
theme = SubResource( 5 )
text = "Objectives"

[node name="Spacer2" type="Control" parent="TextureRect/MarginContainer/Menu/VBoxContainer"]
margin_top = 36.0
margin_right = 83.0
margin_bottom = 46.0
rect_min_size = Vector2( 0, 10 )

[node name="ButtonDocs" type="Button" parent="TextureRect/MarginContainer/Menu/VBoxContainer"]
margin_top = 50.0
margin_right = 83.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 18 )
size_flags_horizontal = 3
theme = SubResource( 5 )
text = "Documents"

[node name="Spacer3" type="Control" parent="TextureRect/MarginContainer/Menu/VBoxContainer"]
margin_top = 72.0
margin_right = 83.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 10 )

[node name="ButtonClose" type="Button" parent="TextureRect/MarginContainer/Menu/VBoxContainer"]
margin_top = 86.0
margin_right = 83.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 18 )
size_flags_horizontal = 3
theme = SubResource( 5 )
text = "Close"

[node name="Documents" parent="TextureRect/MarginContainer" instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = 5.0
margin_right = 125.0
margin_bottom = 172.0

[node name="Objectives" parent="TextureRect/MarginContainer" instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = 5.0
margin_right = 125.0
margin_bottom = 172.0

[connection signal="pressed" from="TextureRect/MarginContainer/Menu/VBoxContainer/ButtonObjectives" to="." method="_on_ButtonObjectives_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/Menu/VBoxContainer/ButtonDocs" to="." method="_on_ButtonDocs_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/Menu/VBoxContainer/ButtonClose" to="." method="_on_ButtonClose_pressed"]
[connection signal="rtrn" from="TextureRect/MarginContainer/Documents" to="." method="_on_Documents_rtrn"]
[connection signal="rtrn" from="TextureRect/MarginContainer/Objectives" to="." method="_on_Objectives_rtrn"]
